--- a/maonga.css
+++ b/maonga.css
@@ -24,9 +24,13 @@ h1 {
         margin left:px
         margin right: px;
     }
+.projects {
+      text color: white;
+      font color: white;
+    }
 
 body {
-    background-color:white;
+    background-color:black;
     margin-top: 20px;
 
 }
@@ -73,20 +77,16 @@ p {
   background-color: beige;
   padding: 40px;
 }
+
 .enoch {
-  width: 90%;
-  float: left;
-  display: flex;
-  flex-direction: row;
-  margin-top:40px;
-  margin-left:10px;
-  margin-right:10px;
-  width: 250px;
-  height: 59%;
-  border-radius: 5px;
-  padding-top: 20px;
-  padding-right: 10px;
+  float: right;
+  width: 20%;
+  padding:5px;
+  display: row;
+  margin-top: 20px;
+  margin-right: 4%
 }
+
 .contacts {
     border-bottom: 2px;
     text-align: center;
