adding about and my projects

--- a/maonga.css
+++ b/maonga.css
@@ -24,7 +24,7 @@ h1 {
         margin left:px
         margin right: px;
     }
-.projects {
+.myprojects {
       text color: white;
       font color: white;
     }
