--- a/maonga.css
+++ b/maonga.css
@@ -30,7 +30,7 @@ h1 {
     }
 
 body {
-    background-color:white;
+    background-color:none;
     margin-top: 20px;
 
 }
@@ -108,10 +108,9 @@ p {
     image-rendering: auto;
     border-radius: 8px;
 }
-.list {
-  text color: white
-  backgroundColor: blue;
-
+h3 {
+  box-sizing: border-box;
+  border
 }
 .ol {
   font-style: italic;
@@ -119,4 +118,17 @@ p {
 h4 {
   color: white;
 
+}
+.list {
+    border-bottom: 2px;
+    text-align: left;
+    font-style: italic;
+    font-color: red;
+    float: left;
+    margin-right:80px;
+    width: 1100px;
+    height: 40%;
+    border-radius: 5px;
+    background-color: beige;
+    padding: 40px;
 }
