--- a/maonga.css
+++ b/maonga.css
@@ -30,7 +30,7 @@ h1 {
     }
 
 body {
-    background-color:none;
+    background-color:black;
     margin-top: 20px;
 
 }
@@ -122,13 +122,14 @@ h4 {
 .list {
     border-bottom: 2px;
     text-align: left;
-    font-style: italic;
+    font-style: normal;
     font-color: red;
     float: left;
     margin-right:80px;
+    margin-left: 20px;
     width: 1100px;
-    height: 40%;
+    height: 60%;
     border-radius: 5px;
-    background-color: beige;
+    background-color: skyblue;
     padding: 40px;
 }
